Fix horizontal scrolling bugs caused by framer-motion x animations and 100vw

--- a/components/About.module.css
+++ b/components/About.module.css
@@ -80,9 +80,9 @@
     text-align: center;
   }
   .imageContainer {
-    width: 100vw;
-    margin-left: calc(50% - 50vw);
-    margin-right: calc(50% - 50vw);
+    width: calc(100% + var(--spacing-container) * 2);
+    margin-left: calc(var(--spacing-container) * -1);
+    margin-right: calc(var(--spacing-container) * -1);
     max-width: none;
     border-radius: 0;
   }
